fix(retrieval): evidence-pack pre-search uses the same hybrid pipeline as justsearch_search (single-sourced preset, rank-preserving docIds end-to-end); deterministic job-claim order via path tie-break (731 I1+I2, review-shipped)
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>